; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_dns.c_cancel_gai_cb.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_dns.c_cancel_gai_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdns_getaddrinfo_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i16, i8*)* @cancel_gai_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cancel_gai_cb(i32 %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  %7 = alloca %struct.evdns_getaddrinfo_request*, align 8
  store i32 %0, i32* %4, align 4
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.evdns_getaddrinfo_request*
  store %struct.evdns_getaddrinfo_request* %9, %struct.evdns_getaddrinfo_request** %7, align 8
  %10 = load %struct.evdns_getaddrinfo_request*, %struct.evdns_getaddrinfo_request** %7, align 8
  %11 = call i32 @evdns_getaddrinfo_cancel(%struct.evdns_getaddrinfo_request* %10)
  ret void
}

declare dso_local i32 @evdns_getaddrinfo_cancel(%struct.evdns_getaddrinfo_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
